--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   sqflite: ^1.3.1+1
   path_provider: ^1.6.14
   intl: ^0.16.1
+  cloud_firestore: ^0.14.0+2
 
 
   # The following adds the Cupertino Icons font to your application.
